--- a/src/main/resources/templates/fragments/doctor/sidebar.html
+++ b/src/main/resources/templates/fragments/doctor/sidebar.html
@@ -15,17 +15,11 @@
                 </a>
             </li>
             <li>
-                <a href="#submenu2" data-bs-toggle="collapse"
+                <a th:onclick="|location.href='@{/doctor/appointment}'|" data-bs-toggle="collapse"
                    class="nav-link px-0 align-middle text-white">
-                    <i class="bi bi-person fs-3"></i> <span class="ms-1 d-none d-sm-inline">왜래 진료
-                                        예약</span>
+                    <i class="bi bi-person fs-3"></i>
+                    <span class="ms-1 d-none d-sm-inline">외래진료예약조회</span>
                 </a>
-                <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                    <li class="w-100">
-                        <a href="doctorManagementTreatment.html" class="nav-link px-0 text-white"> <span
-                                class="d-none d-sm-inline">왜래 진료 예약 조회</span></a>
-                    </li>
-                </ul>
             </li>
         </ul>
         <hr>
